<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff93d7ff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollViewMain"
        android:background="#ff93d7ff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/lblCategories"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center_horizontal"
                android:text="@string/categories"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/abc_text_size_display_1_material"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtFood"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/lblCategories"
                android:clickable="true"
                android:drawableLeft="@drawable/pizza"
                android:gravity="center_vertical"
                android:onClick="onFoodClick"
                android:text="@string/food"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textIsSelectable="false"
                android:textSize="@dimen/abc_text_size_display_2_material" />

            <TextView
                android:id="@+id/txtDrink"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtFood"
                android:autoText="false"
                android:clickable="true"
                android:drawableLeft="@drawable/pepsi"
                android:gravity="center_vertical"
                android:onClick="onDrinkClick"
                android:paddingLeft="18dp"
                android:paddingRight="0dp"
                android:text="@string/drink"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textIsSelectable="false"
                android:textSize="@dimen/abc_text_size_display_2_material" />

            <TextView
                android:id="@+id/textBike"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtDrink"
                android:autoText="false"
                android:clickable="true"
                android:drawableLeft="@drawable/bike"
                android:gravity="center_vertical"
                android:onClick="onActivitiesClick"
                android:paddingLeft="18dp"
                android:paddingRight="0dp"
                android:text="@string/activities"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textIsSelectable="false"
                android:textSize="@dimen/abc_text_size_display_2_material" />

            <TextView
                android:id="@+id/textExcited"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textBike"
                android:autoText="false"
                android:clickable="true"
                android:drawableLeft="@drawable/excited_icon"
                android:gravity="center_vertical"
                android:onClick="onExpressionsClick"
                android:paddingLeft="18dp"
                android:paddingRight="0dp"
                android:text="@string/expressions"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textIsSelectable="false"
                android:textSize="@dimen/abc_text_size_display_2_material" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>

